--- a/user_side/templates/profile.html
+++ b/user_side/templates/profile.html
@@ -64,7 +64,7 @@
                               <form action="" method="post">
                                 {% csrf_token %}
                                 <th>wallet :</th>
-                                 <td>{{wallet}}.rs <!-- Add Money Button -->
+                                 <td>{{wallet.balance}}.rs <!-- Add Money Button -->
                                   <a class="btn btn-primary ml-4" id="addMoneyBtn" style="color: white;">Add Money</a>
                                   </td>
                               </form>
