--- a/user_side/templates/index.html
+++ b/user_side/templates/index.html
@@ -36,7 +36,7 @@
                         <div class="col-lg-5">
                             <div class="banner-content" style="margin-top: 150px;">
                                 <h1>Apple New <br>Collection!</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                                <p>Introducing AirPods Max — a perfect balance of exhilarating high-fidelity audio and the effortless magic of AirPods. The ultimate personal listening experience is here..</p>
                                 <div class="add-bag d-flex align-items-center">
                                     <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
                                     <span class="add-text text-uppercase">Add to Bag</span>
