--- a/user_side/templates/shop.html
+++ b/user_side/templates/shop.html
@@ -120,7 +120,7 @@
                         </select>
                     </form>
                 </div>
-                <div class="pagination">
+                <!-- <div class="pagination">
                     <a href="#" class="prev-arrow"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
                     <a href="#" class="active">1</a>
                     <a href="#">2</a>
@@ -128,7 +128,7 @@
                     <a href="#" class="dot-dot"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
                     <a href="#">6</a>
                     <a href="#" class="next-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                </div>
+                </div> -->
             </div>
             <!-- End Filter Bar -->
             <!-- Start Best Seller -->
