index page category

--- a/user_side/templates/index.html
+++ b/user_side/templates/index.html
@@ -115,10 +115,9 @@
                         <div class="single-deal">
                             <div class="overlay"></div>
                             <img class="img-fluid w-100" src="{% static '4user/img/earbuds.png' %}" alt="">
-                            <a href="{% static '4user/img/category/c1.jpg' %}" class="img-pop-up" target="_blank">
+                            <a href="{% url 'shop' %}?category=1">
                                 <div class="deal-details">
-                                    <h6 class="deal-title">TWS - True Wireless Stereo
-                                    </h6>
+                                    <h6 class="deal-title">TWS - True Wireless Stereo</h6>
                                 </div>
                             </a>
                         </div>
@@ -126,8 +125,8 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="single-deal">
                             <div class="overlay"></div>
-                            <img class="img-fluid w-100" src="{% static '4user/img//speakers.jpg' %}" alt="">
-                            <a href="{% static '4user/img/category/c2.jpg' %}" class="img-pop-up" target="_blank">
+                            <img class="img-fluid w-100" src="{% static '4user/img/speakers.jpg' %}" alt="">
+                            <a href="{% url 'shop' %}?category=2">
                                 <div class="deal-details">
                                     <h6 class="deal-title">Speakers</h6>
                                 </div>
@@ -138,7 +137,7 @@
                         <div class="single-deal">
                             <div class="overlay"></div>
                             <img class="img-fluid w-100" src="{% static '4user/img/earphones.jpg' %}" alt="">
-                            <a href="{% static '4user/img/category/c3.jpg' %}" class="img-pop-up" target="_blank">
+                            <a href="{% url 'shop' %}?category=3">
                                 <div class="deal-details">
                                     <h6 class="deal-title">Wired Earphone</h6>
                                 </div>
@@ -149,7 +148,7 @@
                         <div class="single-deal">
                             <div class="overlay"></div>
                             <img class="img-fluid w-100" src="{% static '4user/img/neckband.avif' %}" alt="">
-                            <a href="{% static '4user/img/category/c4.jpg' %}" class="img-pop-up" target="_blank">
+                            <a href="{% url 'shop' %}?category=4">
                                 <div class="deal-details">
                                     <h6 class="deal-title">Neck-bands</h6>
                                 </div>
@@ -161,8 +160,8 @@
             <div class="col-lg-4 col-md-6">
                 <div class="single-deal">
                     <div class="overlay"></div>
-                    <img class="img-fluid w-100" src="{% static '4user/img/wired_headphones.jpg' %}"  alt="">
-                    <a href="{% static '4user/img/category/c5.jpg' %}" class="img-pop-up" target="_blank">
+                    <img class="img-fluid w-100" src="{% static '4user/img/wired_headphones.jpg' %}" alt="">
+                    <a href="{% url 'shop' %}?category=5">
                         <div class="deal-details">
                             <h6 class="deal-title">Headphones</h6>
                         </div>
@@ -173,6 +172,7 @@
     </div>
 </section>
 <!-- End category Area -->
+
 
 
 
